[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cralph"
version = "0.1.0"
description = "Claude + Ralph: AI-powered feature planning and implementation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cralph = "cralph.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cralph*"]
